blockml/test/errors/04_model/e45/e45m.model
model: e45m
joins:
- from_view: e45_one
  as: a
fields:
- calculation: calc1
  sql: ${a.unk}       
